Bug 316650 - MPM: 1st char of the description in the details tab is not shown
Summary: MPM: 1st char of the description in the details tab is not shown
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 2.1.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 368693 377076 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-13 09:26 UTC by Achim Bohnet
Modified: 2017-04-11 17:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
1st char of description field not displayed (28.35 KB, image/png)
2013-03-13 09:29 UTC, Achim Bohnet
Details
short description (without first char) needlessly shows agian in the textfield (32.62 KB, image/png)
2014-01-16 23:33 UTC, Achim Bohnet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2013-03-13 09:26:37 UTC
E.g.  pkg mythes-de-ch pkg description field in the text area is displayed as

erman Thesaurus for OpenOffice.org/LibreOffice (Swiss Version)

Canonical provides critical updates for mythes-de-ch until Saturday 13 Sep 2014.

Obviously the 'G' is missing in 'erman'.

Reproducible: Always

Steps to Reproduce:
1. start muon package manager
2. click on any package
3. read first word in description in the white text area of details tab


Actual Results:  
1st char of the 1st word of the (short) description in the text field is missing

Expected Results:  
Either
 * display the complete word
or
 * remove the first two lines (short description + empty line) as the same text is written in bold above the text field
Comment 1 Achim Bohnet 2013-03-13 09:29:35 UTC
Created attachment 78005 [details]
1st char of description field not displayed

This is muon 1.9.95-0ubuntu1 on Kubuntu raring
Comment 2 Achim Bohnet 2013-03-15 10:16:51 UTC
(In reply to comment #1)
Bugs exits in 1.9.97-0ubuntu2 kubuntu/raring, which is AFAIU the correct/fix rc tarball
Comment 3 Jonathan Thomas 2013-03-15 15:54:46 UTC
What about libqapt? What version is it at?
Comment 4 Achim Bohnet 2013-03-18 15:49:07 UTC
The same am MPM:

(0)allee@alleehol:~$ dpkg -l libqapt\* muon\*
Desired=Unknown/Install/Remove/Purge/Hold
| Status=Not/Inst/Conf-files/Unpacked/halF-conf/Half-inst/trig-aWait/Trig-pend                                                                
|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)                                                                                    
||/ Name                          Version             Architecture        Description                                                         
+++-=============================-===================-===================-================================================================    
rc  libqapt-runtime               1.4.1-0ubuntu2      amd64               Runtime components for the QApt library                             
rc  libqapt1                      1.4.1-0ubuntu2      amd64               QApt library package                                                
ii  libqapt2                      1.9.97-0ubuntu1     amd64               QApt library package                                                
ii  libqapt2-runtime              1.9.97-0ubuntu1     amd64               Runtime components for the QApt library
ii  muon                          1.9.97-0ubuntu2     amd64               package manager for KDE
ii  muon-installer                1.9.97-0ubuntu2     amd64               Utility for browsing, installing, and removing applications
ii  muon-notifier                 1.9.97-0ubuntu2     amd64               update notifier for KDE
ii  muon-updater                  1.9.97-0ubuntu2     amd64               update manager for KDE
Comment 5 Achim Bohnet 2013-08-16 10:24:57 UTC
Bug still there.  Verified on uptodate saucy with kde 4.11 / Aug 16.

root@alleehol:~# dpkg -l libqapt\* muon\*
Desired=Unknown/Install/Remove/Purge/Hold
| Status=Not/Inst/Conf-files/Unpacked/halF-conf/Half-inst/trig-aWait/Trig-pend
|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)
||/ Name                             Version               Architecture          Description
+++-================================-=====================-=====================-======================================================================
ii  libqapt2                         2.0.65-0ubuntu1       amd64                 QApt library package
ii  libqapt2-runtime                 2.0.65-0ubuntu1       amd64                 Runtime components for the QApt library
ii  muon                             2.0.65-0ubuntu1       amd64                 package manager for KDE
ii  muon-discover                    2.0.65-0ubuntu1       amd64                 Utility for browsing, installing, and removing applications
ii  muon-installer                   2.0.65-0ubuntu1       amd64                 Utility for browsing, installing, and removing applications
ii  muon-notifier                    2.0.65-0ubuntu1       amd64                 update notifier for KDE
ii  muon-updater                     2.0.65-0ubuntu1       amd64                 update manager for KDE


bug also in 2.0.1 & kde sc 4.11 in updated raring.
Comment 6 Achim Bohnet 2014-01-16 23:33:23 UTC
Created attachment 84675 [details]
short description (without first char) needlessly shows agian in the textfield

I See the problem still/again with muon 2.1.2 in a fresh install of Kubuntu Trusty Tahr with a just created user.

See upper left of the text field:
    the 'r' or 'real' is missing.
or alternatively
    only the 1st char is ignored instead of the complete short describtion (needless her as it's displayed above the text field in bold again

I prefer the second alternative as  the real bug ;-)
Comment 7 Achim Bohnet 2014-02-13 12:47:48 UTC
To reproduce:

  sudo apt-get -o=Acquire::Languages=none update
  muon   # ==> bug:  short description (- 1st char) is shows in text field togehtr with long describtion

fixed by

 sudo apt-get update
 muon  # ==> fixed:  short description is not shown in the text field.


I can understand if the bug report is now 'won't fix' but it's can not hurt to harden muon and get rid of the assumption that translation files are up to date, that leads to this strange behaviour of muon.
Comment 8 Carlo Vanini 2016-07-04 09:21:48 UTC
Git commit 0b0c3f8d1e6314a97264072c7907ddc02dc94649 by Carlo Vanini.
Committed on 04/07/2016 at 09:18.
Pushed by vanini into branch 'master'.

Remove leading space in description only if present.

When descriptions are loaded from translation files they start with a
leading whitespace. But when translations are missing that space is not
present.  Therefore, remove the first character only if it actully is a
space.
REVIEW: 128337

Testing Done:
Tested with Muon

Before patching:

* sudo apt-get -o=Acquire::Languages=none update
* run Muon and notice the missing character

After patching:

* run Muon, the character is there
* sudo apt-get update # get back translations
* run Muon, correct description, no leading whitespace

M  +3    -1    src/package.cpp

http://commits.kde.org/libqapt/0b0c3f8d1e6314a97264072c7907ddc02dc94649
Comment 9 Carlo Vanini 2016-09-14 09:07:30 UTC
*** Bug 368693 has been marked as a duplicate of this bug. ***
Comment 10 Carlo Vanini 2017-04-11 17:32:54 UTC
*** Bug 377076 has been marked as a duplicate of this bug. ***