Remove leading space in description only if present.

When descriptions are loaded from translation files they start with a
leading whitespace. But when translations are missing that space is not
present.  Therefore, remove the first character only if it actully is a
space.

BUG: 316650
REVIEW: 128337

Testing Done:
Tested with Muon

Before patching:

* sudo apt-get -o=Acquire::Languages=none update
* run Muon and notice the missing character

After patching:

* run Muon, the character is there
* sudo apt-get update # get back translations
* run Muon, correct description, no leading whitespace